Update issue fix

--- a/AngularUI/src/app/edit-note-view/edit-note-view.component.html
+++ b/AngularUI/src/app/edit-note-view/edit-note-view.component.html
@@ -3,13 +3,13 @@
 
 <div class="container">
 <mat-form-field> 
-  <input [(ngModel)]="note.title" name="editTitle" matInput placeholder="Title" type="text">
+  <input [(ngModel)]="note.noteTitle" name="editTitle" matInput placeholder="Title" type="text">
 </mat-form-field>
 <mat-form-field>
-  <textarea [(ngModel)]="note.text" name="editText" matInput placeholder="Text"></textarea>
+  <textarea [(ngModel)]="note.noteContent" name="editText" matInput placeholder="Text"></textarea>
 </mat-form-field>
  <mat-form-field>
-<mat-select name="editStatus" placeholder="Select state" [(ngModel)]="note.state">
+<mat-select name="editStatus" placeholder="Select state" [(ngModel)]="note.noteStatus">
   <mat-option *ngFor="let state of states" [value]="state">
     {{ state }}
   </mat-option>
